--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "expense-tracker-api",
   "version": "1.0.0",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
